Added markdown cells in chutes_analysis.ipynb

--- a/src/pa01/chutes_analysis.ipynb
+++ b/src/pa01/chutes_analysis.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Snakes and Ladders game analysis\n",
+    "\n",
+    "## Group Members:\n",
+    "- *Christine Brinchmann*\n",
+    "- *Marie Kolvik Valøy*"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -63,6 +74,14 @@
     "    plt.xlabel('Duration of game (number of moves to win)')\n",
     "    plt.ylabel('Frequency count')\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Our analysis\n",
+    "From the histograms we see that when there are more players in the game the mean duration of the game is shorter, and the variance decreases."
    ]
   },
   {
